# asOS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Readme.md  Research.md  Roadmap.md  build.sh  makefile  readme.md  rebuild-toolchain.sh  research.md  roadmap.md  run.sh
ArchLib/: Readme.md
ArchLib/i686/: Linker.ld  Locations.inc.s  Print.S
Boot/: Readme.md
Boot/i686/: Boot.S  Boot2.S  Linker.ld  Pmode.S  PrintReal.S
Docs/: MemoryMap.md
Documentation/: MemoryMap.md
Documentation/Planning/: Research.md  SubProjects.md
Kernel/: Boot.S  Kernel.cpp  Linker.ld
Scripts/: Readme.md  RebuildToolchain.sh
Scripts/BuildToolchain/: gnu.sh  llvm.sh
Scripts/MakeToolchain/: clean.sh  gnu.sh  llvm.sh
StdLib/: StdLib.h  memcpy.cpp  strlen.cpp
boot/: .build.mk  CMakeLists.txt  Makefile
boot/arch/i686/: boot.S
boot/arch/x86_64/: .build.mk  Makefile  efi.c  efi.h  main.c
boot/efi/: Makefile  efi.c  efi.h  entry.c
boot/i686/: Boot.S  Boot2.S  Linker.ld  Pmode.S  Print.S  PrintReal.S  a20.S  boot.S  boot2.S  bootloader.cpp  linker.ld  pmode.S  vga_print_pmode.S  vga_print_rmode.S
build-cfg/: comands.mk  paths.mk  target.mk
cmake/: Toolchain.cmake
docs/: DetectedFeatures.md  MemoryMap.md  Readme.md  bootloader.md  dependency_chain.md  detectedfeatures.md  formatting.md  memorymap.md  simple_formatting.md
docs/plans/: Research.md  Roadmap.md
libs/: Makefile
libs/efi/: efi.c  (+2 more)
scripts/: Build.sh  ConfigureImage.sh  RebuildToolchain.sh  asOS.sh
src/: a20.S  boot.S  boot.s  boot2.S  boot_print.s  bootloader.cpp  linker.ld  secondboot.s  vga_print.S
(+47 files in other folders)
